--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./vendor/normalize.css);
+@import url(./vendor/fonts/fonts.css);
+@import url(./blocks/root/root.css);
+@import url(./blocks/page/page.css);
+@import url(./blocks/header/header.css);
+@import url(./blocks/profile/profile.css);
+@import url(./blocks/locations/locations.css);
+@import url(./blocks/location/location.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/overlay/overlay.css);
+@import url(./blocks/overlay/_opened/overlay_opened.css);
+@import url(./blocks/overlay/_dark/overlay_dark.css);
+@import url(./blocks/project-form/project-form.css);
+@import url(./blocks/project-form/_type/project-form_type_location-create.css);
+@import url(./blocks/project-form/_type/project-form_type_profile-edit.css);
+@import url(./blocks/project-form/_type/project-form_type_confirmation-prompt.css);
+@import url(./blocks/project-form/_type/project-form_type_profile-img-change.css);
+@import url(./blocks/image-popup/image-popup.css);
