--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -2,7 +2,7 @@
   width: 100%;
   min-width: 320px;
   max-width: 1280px;
-  padding: 28px 0 36px 0;
+  padding-bottom: 36px;
 
   display: flex;
   flex-direction: column;
@@ -15,6 +15,6 @@
 
 @media screen and (min-width: 1280px) {
   .page {
-    padding: 45px 0 60px 0;
+    padding-bottom: 60px ;
   }
 }
