--- a/src/blocks/project-form/project-form.css
+++ b/src/blocks/project-form/project-form.css
@@ -3,14 +3,17 @@
 @import url(./__title/_type/project-form__title_type_profile-edit.css);
 @import url(./__title/_type/project-form__title_type_confirmation-prompt.css);
 @import url(./__title/_type/project-form__title_type_profile-img-change.css);
+@import url(./__title/_type/project-form__title_type_user-reg-and-login.css);
 @import url(./__field-wrapper/project-form__field-wrapper.css);
 @import url(./__field-wrapper/_form/project-form__field-wrapper_form_profile-edit.css);
 @import url(./__field-wrapper/_form/project-form__field-wrapper_form_location-create.css);
 @import url(./__field-wrapper/_form/project-form__field-wrapper_form_profile-img-change.css);
+@import url(./__field-wrapper/_form/project-form__field-wrapper_form_user-reg-and-login.css);
 @import url(./__input/project-form__input.css);
 @import url(./__input/_type/project-form__input_type_profile-edit-field.css);
 @import url(./__input/_type/project-form__input_type_location-create-field.css);
 @import url(./__input/_type/project-form__input_type_profile-img-change-field.css);
+@import url(./__input/_type/project-form__input_type_user-reg-and-login-field.css);
 @import url(./__input/_type/project-form__input_type_error.css);
 @import url(./__input-error/project-form__input-error.css);
 @import url(./__input-error/_field/project-form__input-error_field_profile-name.css);
@@ -18,12 +21,15 @@
 @import url(./__input-error/_field/project-form__input-error_field_location-title.css);
 @import url(./__input-error/_field/project-form__input-error_field_location-link.css);
 @import url(./__input-error/_field/project-form__input-error_field_profile-avatar.css);
+@import url(./__input-error/_field/project-form__input-error_field_user-email.css);
+@import url(./__input-error/_field/project-form__input-error_field_user-password.css);
 @import url(./__input-error/_active/project-form__input-error_active.css);
 @import url(./__submit-btn/project-form__submit-btn.css);
 @import url(./__submit-btn/_type/project-form__submit-btn_type_location-create.css);
 @import url(./__submit-btn/_type/project-form__submit-btn_type_profile-edit.css);
 @import url(./__submit-btn/_type/project-form__submit-btn_type_confirmation-prompt.css);
 @import url(./__submit-btn/_type/project-form__submit-btn_type_profile-img-change.css);
+@import url(./__submit-btn/_type/project-form__submit-btn_type_user-reg-and-login.css);
 @import url(./__submit-btn/_disabled/project-form__submit-btn_disabled.css);
 
 .project-form {
