--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @import url(./blocks/root/root.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/_logged-in-mobile/header_logged-in-mobile.css);
+@import url(./blocks/nav/nav.css);
+@import url(./blocks/nav/_logged-in-mobile-inactive/nav_logged-in-mobile-inactive.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/locations/locations.css);
 @import url(./blocks/location/location.css);
@@ -15,4 +18,7 @@
 @import url(./blocks/project-form/_type/project-form_type_profile-edit.css);
 @import url(./blocks/project-form/_type/project-form_type_confirmation-prompt.css);
 @import url(./blocks/project-form/_type/project-form_type_profile-img-change.css);
+@import url(./blocks/project-form/_type/project-form_type_user-reg-and-login.css);
+@import url(./blocks/project-reg-and-login-form-container/project-reg-and-login-form-container.css);
 @import url(./blocks/image-popup/image-popup.css);
+@import url(./blocks/info-tooltip/info-tooltip.css);
